--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numpy = "^2.1.3"
 ipykernel = "^6.29.5"
 streamlit = "^1.40.2"
 seaborn = "^0.13.2"
+openai = "^1.57.2"
 
 
 [tool.poetry.group.dev.dependencies]
